--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 URNA_POSTGRES_HOST=postgres
 URNA_POSTGRES_PORT=5432
-URNA_POSTGRES_USER=aribeth
-URNA_POSTGRES_NAME=aribeth
-URNA_POSTGRES_PASSWORD=aribeth
+URNA_POSTGRES_USER=urna
+URNA_POSTGRES_NAME=urna
+URNA_POSTGRES_PASSWORD=urna
 
