--- a/config/database.yml
+++ b/config/database.yml
@@ -33,7 +33,4 @@ test_readonly:
 
 production: &production
   <<: *development
-  username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
-  host: <%= ENV['DB_HOST'] %>
-  database: <%= ENV['DB_DATABASE'] %>
+  database: urna_production
