--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3'
 services:
+  dev_dick_richardson_mysql:
+    image: mysql:5.7
+    container_name: dev_dick_richardson_mysql
+    env_file: .env.dev
+    environment:
+      MYSQL_ROOT_PASSWORD: dick_richardson
+    ports:
+      - 127.0.0.1:$DEV_DICK_RICHARDSON_MYSQL_PORT:3306
+
   dick_richardson_mysql:
     image: mysql:5.7
     container_name: dick_richardson_mysql
@@ -7,36 +16,37 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: dick_richardson
     ports:
-      - 127.0.0.1:$DICK_RICHARDSON_MYSQL_PORT:3306
+      - 127.0.0.1:$LOCAL_DICK_RICHARDSON_MYSQL_PORT:3306
+    volumes:
+      - ./mysql:/var/lib/mysql
+
 
   #################### Base  ####################
 
   base: &base
-    image: darthjee/dick_richardson
+    image: darthjee/dev_dick_richardson
     volumes:
       - ./source:/home/app/app
     links:
-      - dick_richardson_mysql:mysql
-    env_file: .env
+      - dev_dick_richardson_mysql:mysql
+    env_file: .env.dev
 
 
   base_build:
     <<: *base
     build:
       context: .
-      dockerfile: Dockerfile.dick_richardson
+      dockerfile: Dockerfile.dev_dick_richardson
     command: echo done
 
   production_base_build:
     image: darthjee/production_dick_richardson
-    env_file: .env
+    env_file: .env.dev
     environment:
       RAILS_ENV: production
     build:
       context: .
       dockerfile: Dockerfile.production_dick_richardson
-    links:
-      - dick_richardson_mysql:mysql
     command: echo done
   #################### CONTAINERS ####################
 
@@ -65,7 +75,15 @@ services:
     container_name: dick_richardson_root
     command: /bin/bash
     depends_on: [base_build]
+
   dick_richardson_production:
     env_file: .env.production
     container_name: dick_richardson_production
     image: $PRODUCTION_IMAGE
+
+  dick_richardson:
+    env_file: .env
+    container_name: dick_richardson
+    image: darthjee/dick_richardson
+    links:
+      - dick_richardson_mysql:mysql
