Remove clean step

--- a/Dockerfile.dev_dick_richardson
+++ b/Dockerfile.dev_dick_richardson
@@ -4,7 +4,7 @@ WORKDIR /home/app/app
 COPY --chown=app:app source/Gemfile* /home/app/app/
 COPY --chown=app:app source/bower.json /home/app/app/
 
-RUN bundle install --clean
+RUN bundle install
 
 USER app
 RUN bower install
