--- a/source/Gemfile
+++ b/source/Gemfile
@@ -40,6 +40,7 @@ gem 'bower-rails',  '~> 0.12.0'
 gem 'magicka',      '~> 0.6.0'
 gem 'newrelic_rpm', '~> 6.9.0.363'
 gem 'nokogiri',     '1.13.6'
+gem 'faraday'
 gem 'rake',         '13.0.6'
 gem 'sinclair',     '~> 1.8.0'
 gem 'tarquinn',     '~> 0.2.0'
