--- a/source/.rubocop.yml
+++ b/source/.rubocop.yml
@@ -43,3 +43,12 @@ Layout/EmptyLinesAroundBlockBody:
 
 RSpec/NestedGroups:
   Max: 6
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
