--- a/Dockerfile.dev_dick_richardson
+++ b/Dockerfile.dev_dick_richardson
@@ -5,6 +5,7 @@ COPY --chown=app:app source/Gemfile* /home/app/app/
 COPY --chown=app:app source/bower.json /home/app/app/
 
 RUN bundle install
+RUN bundle clean --force
 
 USER app
 RUN bower install
