--- a/Dockerfile.dev_dick_richardson
+++ b/Dockerfile.dev_dick_richardson
@@ -1,10 +1,11 @@
-FROM darthjee/dick_richardson-base:0.0.1
+FROM darthjee/dev_dick_richardson-base:0.0.2
 
 WORKDIR /home/app/app
 COPY --chown=app:app source/Gemfile* /home/app/app/
 COPY --chown=app:app source/bower.json /home/app/app/
 
-RUN bundle install --clean
+RUN bundle install
+RUN bundle clean --force
 
 USER app
 RUN bower install
