--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       MYSQL_ROOT_PASSWORD: dick_richardson
     ports:
       - 127.0.0.1:$DEV_DICK_RICHARDSON_MYSQL_PORT:3306
-  dev_plague_inc_redis:
+  dev_dick_richardson_redis:
     image: redis:6.2.4
-    container_name: dev_dick_richardson_mysql
+    container_name: dev_dick_richardson_redis
     env_file: .env.dev
 
   dick_richardson_mysql:
@@ -23,6 +23,10 @@ services:
       - 127.0.0.1:$LOCAL_DICK_RICHARDSON_MYSQL_PORT:3306
     volumes:
       - ./mysql:/var/lib/mysql
+  dick_richardson_redis:
+    image: redis:6.2.4
+    container_name: dick_richardson_redis
+    env_file: .env.dev
 
 
   #################### Base  ####################
