Add env variable

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DICK_RICHARDSON_MYSQL_NAME=dick_richardson
 DICK_RICHARDSON_MYSQL_PASSWORD=dick_richardson
 DICK_RICHARDSON_PASSWORD_SALT=abcd
 RAILS_ENV=production
+DICK_RICHARDSON_REDIS_URL=redis://redis:6379/0
