--- a/.env.dev
+++ b/.env.dev
@@ -5,3 +5,4 @@ DICK_RICHARDSON_MYSQL_USER=root
 DICK_RICHARDSON_MYSQL_NAME=dick_richardson
 DICK_RICHARDSON_MYSQL_PASSWORD=dick_richardson
 DICK_RICHARDSON_PASSWORD_SALT=abcd
+DICK_RICHARDSON_REDIS_URL=redis://redis:6379/0
