--- a/Dockerfile.production_dick_richardson
+++ b/Dockerfile.production_dick_richardson
@@ -6,7 +6,7 @@ FROM base as builder
 
 COPY --chown=app:app ./source/ /home/app/app/
 
-RUN bundle install --clean --without development test;
+RUN bundle install --without development test;
 
 RUN rm /home/app/app/config/master.key -f
 RUN rm /home/app/app/config/credentials.yml.enc -f
