--- a/Dockerfile.production_dick_richardson
+++ b/Dockerfile.production_dick_richardson
@@ -1,4 +1,4 @@
-FROM darthjee/production_dick_richardson-base:0.0.2 as base
+FROM darthjee/production_dick_richardson-base:0.0.3 as base
 
 ####################################
 
@@ -26,4 +26,4 @@ FROM base
 
 COPY --chown=app:app --from=builder /home/app/app/ /home/app/app/
 
-RUN bundle install --without development test
+RUN bundle install --clean --without development test
