--- a/Dockerfile.production_dick_richardson
+++ b/Dockerfile.production_dick_richardson
@@ -26,4 +26,4 @@ FROM base
 
 COPY --chown=app:app --from=builder /home/app/app/ /home/app/app/
 
-RUN bundle install --clean --without development test
+RUN bundle install --without development test
