--- a/source/Gemfile
+++ b/source/Gemfile
@@ -15,7 +15,7 @@ gem 'mysql2'
 # Use Puma as the app server
 gem 'puma', '~> 6.0.0'
 # Use SCSS for stylesheets
-gem 'sass-rails', '6.0.0'
+gem 'sass-rails', '>= 6.0.0'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '4.2.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
