--- a/source/Gemfile
+++ b/source/Gemfile
@@ -17,7 +17,7 @@ gem 'puma', '~> 6.0.0'
 # Use SCSS for stylesheets
 gem 'sass-rails', '>= 6.0.0'
 # Use Uglifier as compressor for JavaScript assets
-gem 'uglifier', '4.2.0'
+gem 'uglifier', '>= 4.2.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'mini_racer', platforms: :ruby
 
