--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,9 @@ workflows:
   test:
     jobs:
       - test:
-          filters:
-            tags:
-              only: /.*/
       - checks:
-          filters:
-            tags:
-              only: /.*/
+      - test-build:
+          requires: [test, checks]
       - build-and-release:
           requires: [test, checks]
           filters:
@@ -93,6 +89,13 @@ jobs:
       - run:
           name: Rubocop
           command: rubocop
+  test-build:
+    machine: true
+    steps:
+      - checkout
+      - run:
+          name: Build
+          command: scripts/deploy.sh build
   build-and-release:
     machine: true
     steps:
