--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,19 @@ workflows:
   version: 2
   test:
     jobs:
-      - test
-      - checks
+      - test:
+          filters:
+            tags:
+              only: /.*/
+      - checks:
+          filters:
+            tags:
+              only: /.*/
       - test-build:
           requires: [test, checks]
+          filters:
+            tags:
+              only: /.*/
       - build-and-release:
           requires: [test, checks]
           filters:
